# native-list2webp

./: .gitmodules  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: release.yml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/main/cpp/: CMakeLists.txt  externalLibrariesConfig.cmake  fix_configure_error.patch
src/main/cpp/av-helper/: av-helper.c  av-helper.h  frame_queue.c  frame_queue.h  main.c
src/main/java/io/github/tobelogin/: FormatConverter.kt
